--- a/Results.tex
+++ b/Results.tex
@@ -6,7 +6,7 @@
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig1_Exp_principle.pdf}
-    \caption{Measuring the binding time of RecB on DNA. \textbf{(A)} Scheme of our experimental protocol. The RecB subunit of the RecBCD complex is fused to a Halo-tag, bound by the JF549 fluorescent dye\cite{Lepore2019a, Lepore2023}. A long exposure time (1 sec) makes diffusing molecules appear as diffuse signal in the cell, while DNA-bound molecules are visible as bright, diffraction-limited spots. \textbf{(B)} Example image of a RecB spot (white arrow). \textbf{(C)} Example kymographs of RecB throughout an acquisition, showing short- and long-lived fluorescent spots. A short timelapse (100 sec) is acquired at a different position every 2 min for 75 min.}
+    \caption{Detecting RecB binding to DSBs. \textbf{(A)} Scheme of our experimental protocol. The RecB subunit of the RecBCD complex is fused to a Halo-tag, bound by the JF549 fluorescent dye\cite{Lepore2019a, Lepore2023}. A long exposure time (1 sec) makes diffusing molecules appear as diffuse signal in the cell, while DNA-bound molecules are visible as bright, diffraction-limited spots. \textbf{(B)} Example image of a RecB spot (white arrow). \textbf{(C)} Example kymographs (2 sec interval, 100 sec total) of cells containing short- and long-lived RecB spots.}
     \label{Fig:exp_principle}
 \end{figure*}
 
@@ -27,32 +27,31 @@ Using the timelapse data, we built histograms of RecB spot lifetimes at the diff
 \begin{table}[htbp]
     \centering
     \caption{Parameters derived from the spot lifetime histogram fits (Figures \ref{Fig:lifetimes}A and \ref{Fig:lifetimes}B). The lifetime was calculated as the inverse of the fitted dissociation rate. Values are given as the median $\pm$ standard deviation over at least 3 independent datasets. \ncells{66,764}. \nspots{170,138}}
-    \begin{tabular}{llll}
+    \begin{tabular}{lllll}
         \toprule
-         &  & Lifetime (sec) & Population (\%) \\
-        Ciprofloxacin & Type &  &  \\
+        &  &  & \makecell{Lifetime\\(sec)} & \makecell{Population\\(\%)} \\
+        Strain & \makecell{Cipro.} & Type &  &  \\
         \midrule
-        \multirow[t]{2}{*}{0 ng/ml} & Short & 1.4 $\pm$ 0.2 & 98.2 $\pm$ 1.0 \\
-         & Long & 9.5 $\pm$ 9.7 & 1.8 $\pm$ 1.0 \\
-        \cline{1-4}
-        \multirow[t]{2}{*}{3 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.6 $\pm$ 0.3 \\
-         & Long & 10.5 $\pm$ 1.3 & 1.4 $\pm$ 0.3 \\
-        \cline{1-4}
-        \multirow[t]{2}{*}{10 ng/ml} & Short & 1.7 $\pm$ 0.2 & 97.6 $\pm$ 0.6 \\
-         & Long & 13.7 $\pm$ 2.3 & 2.4 $\pm$ 0.6 \\
-        \cline{1-4}
-        \multirow[t]{2}{*}{20 ng/ml} & Short & 1.6 $\pm$ 0.2 & 96.6 $\pm$ 0.8 \\
-         & Long & 11.8 $\pm$ 2.1 & 3.4 $\pm$ 0.8 \\
-        \cline{1-4}
-        \multirow[t]{2}{*}{30 ng/ml} & Short & 1.7 $\pm$ 0.2 & 94.5 $\pm$ 1.4 \\
-         & Long & 13.3 $\pm$ 2.2 & 5.5 $\pm$ 1.4 \\
-        \cline{1-4}
+        \multirow[t]{10}{*}{WT} & \multirow[t]{2}{*}{0 ng/ml} & Short & 1.4 $\pm$ 0.2 & 98.2 $\pm$ 1.0 \\
+        &  & Long & 9.5 $\pm$ 9.7 & 1.8 $\pm$ 1.0 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{3 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.6 $\pm$ 0.3 \\
+         &  & Long & 10.5 $\pm$ 1.3 & 1.4 $\pm$ 0.3 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{10 ng/ml} & Short & 1.7 $\pm$ 0.2 & 97.6 $\pm$ 0.6 \\
+        &  & Long & 13.7 $\pm$ 2.3 & 2.4 $\pm$ 0.6 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{20 ng/ml} & Short & 1.6 $\pm$ 0.2 & 96.6 $\pm$ 0.8 \\
+        &  & Long & 11.8 $\pm$ 2.1 & 3.4 $\pm$ 0.8 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{30 ng/ml} & Short & 1.7 $\pm$ 0.2 & 94.5 $\pm$ 1.4 \\
+        &  & Long & 13.3 $\pm$ 2.2 & 5.5 $\pm$ 1.4 \\
         \midrule
-        \multirow[t]{2}{*}{0 ng/ml, Gam} & Short & 1.7 $\pm$ 0.2 & 99.2 $\pm$ 0.4 \\
-         & Long & 15.5 $\pm$ 9.1 & 0.8 $\pm$ 0.4 \\
-        \cline{1-4}
-        \multirow[t]{2}{*}{30 ng/ml, Gam} & Short & 1.5 $\pm$ 0.1 & 98.2 $\pm$ 0.9 \\
-        & Long & 8.2 $\pm$ 1.8 & 1.8 $\pm$ 0.9 \\
+        \multirow[t]{4}{*}{Gam} & \multirow[t]{2}{*}{0 ng/ml} & Short & 1.7 $\pm$ 0.2 & 99.2 $\pm$ 0.4 \\
+        &  & Long & 15.5 $\pm$ 9.1 & 0.8 $\pm$ 0.4 \\
+        \cline{2-5}
+        & \multirow[t]{2}{*}{30 ng/ml} & Short & 1.5 $\pm$ 0.1 & 98.2 $\pm$ 0.9 \\
+        & & Long & 8.2 $\pm$ 1.8 & 1.8 $\pm$ 0.9 \\
         \bottomrule
         \end{tabular}
     \label{tab:fit_results}
@@ -100,7 +99,7 @@ As for the wild-type strain, we imaged RecB, computed histograms of RecB spot li
 \begin{figure}[htbp]
     \centering
     \includegraphics[width=.4\textwidth]{Figures/Fig3_RecB_recruitment.pdf}
-    \caption{\textbf{(A)} Recruitment rate per cell of RecB on DNA at different ciprofloxacin concentrations. Black points show individual datasets, and bars the median value. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate per cell of RecB on DNA for the \dreca\ and \geneteneighty\ mutants. Black points show individual datasets, and bars the median value. \ncells{23,540}. \nspots{99,891}.}
+    \caption{Recruitment of RecB to DSBs. \textbf{(A)} Recruitment rate of RecB on DNA per cell at different ciprofloxacin concentrations. Black points show individual datasets, and bars the median value. \ncells{66,764}. \nspots{170,138}. \textbf{(B)} Recruitment rate of RecB on DNA per cell for the \dreca\ and \geneteneighty\ mutants. Black points show individual datasets, and bars the median value. \ncells{23,540}. \nspots{99,891}.}
     \label{Fig:recruitment}
 \end{figure}
 
@@ -108,7 +107,7 @@ As for the wild-type strain, we imaged RecB, computed histograms of RecB spot li
 Whereas the lifetime of RecB spots informs us on how long RecB stays bound to DNA, the rate of appearance of spots helps us estimate the rate of recruitment of RecB to DSBs under each DNA damage condition. To do so, we used the RecB spot lifetime histogram fits to estimate the total number of slow-dissociating spots per timelapse. Since we determined that the appearance of a slow-dissociating spot corresponds to the binding of RecB to a DSB, this allowed us to calculate the number of RecB recruitments to DSBs per cell per hour (Figure \ref{Fig:recruitment}A). We expect that the recruitment rate of RecB to DSBs gives a close estimate of the rate of formation of DSBs by ciprofloxacin (see discussion). We estimated that under endogenous damage or low ciprofloxacin concentrations, 1 to 2 RecB molecules are recruited to DSBs per hour on average. A previous study had estimated that 18\% of cells generated an endogenous DSB per cell cycle\cite{Sinha2018}. Considering the division time in our growth conditions (35 min), this would correspond to a rate of $\sim$0.3 DSBs per hour, a value roughly consistent with our own estimate. As expected, the recruitment rate of RecB scaled with ciprofloxacin concentration, up to 8 RecB recruited to DNA per hour at 30 ng/ml. It has been reported that DSB repair from the point of RecBCD binding takes $\sim$15 min in \emph{E. coli}\cite{Wiktor2021}; therefore, it appears consistent that undergoing 8 DSBs per hour at 30 ng/ml ciprofloxacin (a concentration higher than the Minimum Inhibitory Concentration, MIC) will be lethal to most cells.
 
 % RecB recruitment in mutants
-Estimating the recruitment rate of RecB to DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the \dreca\ mutant, the rate of recruitment of RecB was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB that cannot be repaired. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD and ExoI\cite{Zahradka2009}. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
+Estimating the recruitment rate of RecB to DNA provided additional insight into the dynamics of DSB processing in the \dreca\ and \geneteneighty\ mutants (Figure \ref{Fig:recruitment}B). In the \dreca\ mutant, the rate of recruitment of RecB to DSBs was increased compared to wild-type cells, both in the presence and absence of ciprofloxacin. As in both cases the rate of DSB formation is expected to be the same between the wild-type and the \dreca\ mutant, we can hypothesise that this higher rate of RecB recruitment to DNA is due to multiple recruitment events on the same original DSB that cannot be repaired. In the mutant cells, RecBCD processes the DNA, but the generated ssDNA cannot be coated with the RecA protein, and is therefore likely to be degraded by cellular endo- and exonucleases such as SbcCD and ExoI\cite{Zahradka2009}. Degradation of the ssDNA would lead to a blunting of the DNA end, hence creating a new substrate for RecBCD binding. This deleterious cycle was previously reported to occur in cells lacking the RecA protein, eventually leading to full chromosome degradation\cite{Capaldo1975,Skarstad1993}. In our experiment, it results in multiple recruitments of RecB to DNA for each DSB.
 
 % Recruitment in RecB1080
 In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but equivalent (in the absence of ciprofloxacin) or lower (in the presence of 30 ng/ml ciprofloxacin) to the level of RecB recruitment in the \dreca\ mutant (Figure \ref{Fig:recruitment}B). Upon DSB recognition, \teneighty\ unwinds DNA without digesting it, and dissociates $\sim$1.5 times slower than wild-type RecB (Tables \ref{tab:fit_results} and \ref{tab:fit_mutants}). After RecBCD dissociation, we expect two competing pathways to take place. Either (i) the unwound ssDNA is digested by cellular endo- and exonucleases, creating a new RecBCD substrate; or (ii) RecFOR displaces the SSB (Single-Strand DNA-Binding) protein and promotes RecA loading, allowing DNA repair by homologous recombination to proceed\cite{Ivancic-Bace_2003}. As a result, \teneighty\ can be recruited on DNA several times for each DSB (similarly to the \dreca\ mutant), but the cycle of re-recruitment can be broken by the action of RecFOR.
@@ -120,7 +119,7 @@ In the \geneteneighty\ mutant, RecB recruitment is higher than in WT cells, but 
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig4_nucleoid.pdf}
-    \caption{Colocalisation of RecB spots with the bacterial nucleoid. \textbf{(A)} Representative images of cells (segmented outline in grey) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(B)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/ml). \ncells{24,014}. \nspots{79,969}. \nnucl{31,441}. \textbf{(C)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green) in the \dreca\ and \geneteneighty\ mutants. Segmented cell outline shown in grey. \textbf{(D)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis for the \dreca\ and \geneteneighty\ mutants. \ncells{7,804}. \nspots{36,595}. \nnucl{11,215}.}
+    \caption{Colocalisation of RecB spots with the bacterial nucleoid. \textbf{(A)} Representative images of cells (segmented outline in grey) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(B)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/ml). \ncells{24,014}. \nspots{79,969}. \nnucl{31,441}. \textbf{(C)} Representative overlay images of RecB-associated fluorescence (magenta) and the bacterial nucleoid (green) in the \dreca\ and \geneteneighty\ mutants. Segmented cell outline shown in grey. \textbf{(D)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis for the \dreca\ and \geneteneighty\ mutants at 0 and 30 ng/ml ciprofloxacin. \ncells{7,804}. \nspots{36,595}. \nnucl{11,215}.}
     \label{Fig:nucleoid}
 \end{figure*}
 
